# dsn-mcp

./: .env.example  .gitignore  README.md  install.bat  install.sh  main.py  pyproject.toml
data/2025/: combinaisons.json  ct.json  metadata.json  nomenclatures.json  usages.json
data/2026/: ct.json  metadata.json
dsn_mcp/: models.py  search.py  store.py
dsn_mcp/tools/: __init__.py  compare_versions.py  get_bloc.py  get_combinaisons.py  get_controls.py  get_nomenclature.py  get_rubrique.py  get_usage.py  list_blocs.py  search_enumerations.py  search_rubriques.py
scripts/: assemble.py  extract_pdf.py  extract_xlsx.py
tests/: conftest.py  test_search.py  test_store.py
